--- a/workflow-guide/0___preamble.adoc
+++ b/workflow-guide/0___preamble.adoc
@@ -1,7 +1,7 @@
 The SSP Traceability Workflow Guide is a supplementary documentation to the SSP Traceability Specification 1.0. While the SSP Traceability Specification 1.0 essentially describes a data format for STMD files in the sense of a normative document, the SSP Traceability Workflow Guide addresses how and in which way  Glue Paerticles are used in industrial practice. It thus addresses topics and answers questions that the SSP Traceability Specification 1.0 as a normative document cannot address and answer.
 
-This is a development version of the SSP Traceability Workflow Guide. Releases and issues can be found at github.com/PMSFIT/SSPTraceability.
-https://github.com/PMSFIT/SSPTraceability/releases[Releases] and https://github.com/PMSFIT/SSPTraceability/issues[issues] can be found on https://github.com/PMSFIT/SSPTraceability[github.com/PMSFIT/SSPTraceability].
+This is a development version of the SSP Traceability Workflow Guide.
+https://github.com/PMSFIT/SSPTraceabilityGuides/releases[Releases] and https://github.com/PMSFIT/SSPTraceabilityGuides/issues[issues] can be found on https://github.com/PMSFIT/SSPTraceabilityGuides[github.com/PMSFIT/SSPTraceabilityGuides].
 
 ////
 Copyright notice and license information will go here.
