Update and rename 2___Objectives, structure, and application of SSP traceability.adoc to 2___Objectives-structure.adoc

--- a/workflow-guide/2___Objectives-structure.adoc
+++ b/workflow-guide/2___Objectives-structure.adoc
@@ -1,4 +1,4 @@
-[#sec-Objectives, structure, and application of SSP traceability]
+[#sec-Objectives-structure]
 == Objectives, structure, and application of SSP traceability
 
 Objectives:
