Update and rename 4___Design Specification with SSP, SSP-Traceability.adoc.adoc to 4___Design-Spec-SSP.adoc

--- a/workflow-guide/4___Design-Spec-SSP.adoc
+++ b/workflow-guide/4___Design-Spec-SSP.adoc
@@ -1,4 +1,4 @@
-[#Design Specification with SSP, SSP-Traceability]
+[#Design-Spec-SSP]
 == Design Specification with SSP, SSP-Traceability
 
 The SSP standard is intended to support
