Update and rename 5___Examples LS SSP-Traceability.adoc to 5___Examples-LS-SSP-Traceability.adoc

--- a/workflow-guide/5___Examples-LS-SSP-Traceability.adoc
+++ b/workflow-guide/5___Examples-LS-SSP-Traceability.adoc
@@ -1,4 +1,4 @@
-[#Examples LS SSP-Traceability]
+[#Examples-LS-SSP-Traceability]
 == Examples LS SSP-Traceability
 
 All examples are based on the simulation task of a DC-motor (Figure 18)
