Update and rename 3___Application-CSP.adoc to 3___application-csp.adoc

--- a/workflow-guide/3___application-csp.adoc
+++ b/workflow-guide/3___application-csp.adoc
@@ -1,4 +1,3 @@
-[#sec-Application-CSP]
 == Structure and application of the Credible Simulation Process
 
 A detailed description of the Credible Simulation Process Framework is available at (link). Figure 4 shows a more detailed structure of the Credible Simulation Process. Each phase is further divided into sub-elements called process steps. These steps have a uniform structure, as is also known from process descriptions
@@ -11,17 +10,16 @@ A detailed description of the Credible Simulation Process Framework is available
 The STMD schema maps this structure. In the application, the existing information of a simulation task can now be linked accordingly.
 
 
-[#im-CSP-details]
 .Detailed structure of the Credible Simulation Process
-image::GlueParCSP-details.png[1000, 1000]
+image::GlueParCSP-details.png[GlueParCSP-details, 1000, 1000]
 
 
 == Allocation and linking of information
 
 
-[#im-SSP-Trace-structure]
+
 .LS SSP-Traceability file structure
-image::SSP-Trace-structure.png[1000, 1000]
+image::SSP-Trace-structure.png[SSP-Trace-structure, 1000, 1000]
 
 
 The SSP structure has been supplemented with a directory extra for layered standard extensions. Each layered standard has its own specific folder, e.g., for the simulation task org.ssp-standard.ssp-traceability.stmd. The necessary information and files specific to the SSP layered standard are then stored in this folder. 
@@ -33,9 +31,9 @@ For ease of understanding, the files are numbered according to their logical ord
 Figure 6 shows how and where information is linked in the STMD schema.
 The STMD XML schema maps a simulation process. Information and files can now be linked to the appropriate locations within it according to their content.
 
-[#im-STMD-Links]
+
 .Linking information to the STMD file
-image::STMD-Links.png[1000, 1000]
+image::STMD-Links.png[STMD-Links, 1000, 1000]
 
 
 === Information from Simulation Request
@@ -101,18 +99,15 @@ see Phase Admin
 * Any format, e.g., Markdown
 ** Line 5 in Figure 7 and figure 9
 
-[#im-Admin-classif]
 .Use of classifications for metadata
-image::Admin-classif.png[1000, 1000]
+image::Admin-classif.png[Admin-classif, 1000, 1000]
 
 
-[#im-Admin-SRMD]
 .SRMD file for describing metadata
-image::Admin-SRMD.png[1000, 1000]
+image::Admin-SRMD.png[Admin-SRMD, 1000, 1000]
 
-[#im-Admin-markdown]
 .Administrative information as an md file
-image::Admin-markdown.png[1000, 1000]
+image::Admin-markdown.png[Admin-markdown, 1000, 1000]
 
 The options are equivalent. Which approach you choose depends on the form in which the information is available and how the simulation task is to be further evaluated. A request file can also be included, and some relevant metadata can be attached as classifications. Here, however, it is important to note what is the single source of truth and what are copies or interpretations in the metadata.
 
@@ -121,23 +116,20 @@ The options are equivalent. Which approach you choose depends on the form in whi
 The LS SSP-Traceability supports metadata with the classification approach (details see at the specification). Multiplicity of classifications are possible, so for example the classification parameter can be used several times to list a set of parameters. 
 The classification schema was deliberately kept simple so that it can be supported relatively easily by tools. Therefore, it does not support sub-structuring or other features. The ordering of classification has no syntactical meaning, if  a kind of grouping is needed, like for two tools to express their names and version, the Modelica convention of brackets and numbers can be used (see figure 10).
 
-[#im-Metadata-Multi]
 .Sets, multiplicity of metadata, classifications
-image::Metadata-Multi.png[1000, 1000]
+image::Metadata-Multi.png[Metadata-Multi, 1000, 1000]
 
 
 === Basic traceability of a simulation task using metadata
 
 The information and metadata required depend on the use case. Figures 11 and 12 describe a set of metadata that is the minimum required for basic traceability. This metadata can be provided with little effort. 
 
-[#im-GlueParticleStructureSchema]
 .Location of metadata in the CSP and their sources
-image::GlueParticleStructureSchema.png[1000, 1000]
+image::GlueParticleStructureSchema.png[GlueParticleStructureSchema, 1000, 1000]
 
 
-[#im-Metadata-basic-CSP]
 .Set of metadata required for basic traceability
-image::Metadata-basic-CSP.png[1000, 1000]
+image::Metadata-basic-CSP.png[Metadata-basic-CSP, 1000, 1000]
 
 === Usage of metadata for search and reuse
 
@@ -150,17 +142,14 @@ This minimum set of metadata (Figure 12) can already be used to perform basic ev
 *	Which existing simulation settings can possibly be used as a template for a new simulation task?
 * ...
 
-[#im-Metadata-Search]
 .Usage of metadata for search and evaluation
-image::Metadata-Search.png[1000, 1000]
+image::Metadata-Search.png[Metadata-Search, 1000, 1000]
 
 
-[#im-Metadata-Reuse]
 .Usage of metadata for reuse of simulation
-image::Metadata-Reuse.png[1000, 1000]
+image::Metadata-Reuse.png[Metadata-Reuse, 1000, 1000]
 
 
-[#im-Metadata-usage]
 .“Execution dump” from simulation tool as source for metadata
-image::Metadata-usage.png[1000, 1000]
+image::Metadata-usage.png[Metadata-usage, 1000, 1000]
 
