Correct heading hierarchies
Signed-off-by: Pierre R. Mai <pmai@pmsf.de>

--- a/workflow-guide/3___application_csp.adoc
+++ b/workflow-guide/3___application_csp.adoc
@@ -14,7 +14,7 @@ The STMD schema maps this structure. In the application, the existing informatio
 image::GlueParCSP-details.png[GlueParCSP-details, 1000, 1000]
 
 
-== Allocation and linking of information
+=== Allocation and linking of information
 
 
 
@@ -26,7 +26,7 @@ The SSP structure has been supplemented with a directory extra for layered stand
 Figure 5 shows the structure for the example explained below.
 For ease of understanding, the files are numbered according to their logical order. The last file shown here is the simulation task meta data file (.stmd), which contains the structure and links of the information.
 
-=== Linking information in the STMD file
+==== Linking information in the STMD file
 
 Figure 6 shows how and where information is linked in the STMD schema.
 The STMD XML schema maps a simulation process. Information and files can now be linked to the appropriate locations within it according to their content.
@@ -36,7 +36,7 @@ The STMD XML schema maps a simulation process. Information and files can now be 
 image::STMD-Links.png[STMD-Links, 1000, 1000]
 
 
-=== Information from Simulation Request
+==== Information from Simulation Request
 
 A simulation request typically contains administrative information and information describing the simulation task.
 The administrative information is necessary for linking to the commissioning processes, development, (name of the product, product development, simulation task, commissioning agency, etc.).
@@ -45,7 +45,7 @@ The administrative information is linked under administrative information.
 The information describing the simulation task is linked under Input in the Analysis Phase. Any number of sources can be linked here, e.g., a Markdown description and a supplementary PDF. If the information is only available in a single file, this file can be linked to several places.
 
 
-=== Linking to phases, steps, inputs, outputs
+==== Linking to phases, steps, inputs, outputs
 
 The location of the links to the information should allow assignment to specific phases. For larger simulation tasks, a distinction is made within the phases as to whether this information is specific to the models, parameterization, etc. These steps have a uniform structure, as is also known from process descriptions
 
@@ -74,11 +74,11 @@ In practice, for example, in the design specification phase, there is often only
 If complete traceability of all details is not required, however, at least the information in the outputs of all phases should be available. This also enables traceability, with the restriction that it is not possible to directly trace which information was used to achieve the output. 
 
 
-== Metadata
+=== Metadata
 
 Metadata serves to provide keywords. In the LS SSP-Traceability Layered, the classification element was introduced for this purpose. Metadata (classifications) can also be combined into a separate Simulation Resource Meta Data (SRMD) file.
 
-=== Usage of Metadata
+==== Usage of Metadata
 
 *	Metadata can be created and used directly as classifications
 *	Created and linked as an SRMD file
@@ -87,7 +87,7 @@ Metadata serves to provide keywords. In the LS SSP-Traceability Layered, the cla
 *	Metadata as an SRMD file in FMUs, 
 
 
-=== Metadata using example General (administrative) Information
+==== Metadata using example General (administrative) Information
 
 The following example shows that there are several options for placing administrative information in the STMD file, 
 see Phase Admin
@@ -111,7 +111,7 @@ image::Admin-markdown.png[Admin-markdown, 1000, 1000]
 
 The options are equivalent. Which approach you choose depends on the form in which the information is available and how the simulation task is to be further evaluated. A request file can also be included, and some relevant metadata can be attached as classifications. Here, however, it is important to note what is the single source of truth and what are copies or interpretations in the metadata.
 
-=== Structuring, multiplicity of metadata
+==== Structuring, multiplicity of metadata
 
 The LS SSP-Traceability supports metadata with the classification approach (details see at the specification). Multiplicity of classifications are possible, so for example the classification parameter can be used several times to list a set of parameters. 
 The classification schema was deliberately kept simple so that it can be supported relatively easily by tools. Therefore, it does not support sub-structuring or other features. The ordering of classification has no syntactical meaning, if  a kind of grouping is needed, like for two tools to express their names and version, the Modelica convention of brackets and numbers can be used (see figure 10).
@@ -120,7 +120,7 @@ The classification schema was deliberately kept simple so that it can be support
 image::Metadata-Multi.png[Metadata-Multi, 1000, 1000]
 
 
-=== Basic traceability of a simulation task using metadata
+==== Basic traceability of a simulation task using metadata
 
 The information and metadata required depend on the use case. Figures 11 and 12 describe a set of metadata that is the minimum required for basic traceability. This metadata can be provided with little effort. 
 
@@ -131,7 +131,7 @@ image::GlueParticleStructureSchema.png[GlueParticleStructureSchema, 1000, 1000]
 .Set of metadata required for basic traceability
 image::Metadata-basic-CSP.png[Metadata-basic-CSP, 1000, 1000]
 
-=== Usage of metadata for search and reuse
+==== Usage of metadata for search and reuse
 
 This minimum set of metadata (Figure 12) can already be used to perform basic evaluations, searches and reuse (Figuer 13 + 14). If this metadata is attached to the corresponding sources, further information can be obtained by analyzing the sources as needed.
 
